--- a/app/partials/partial2.html
+++ b/app/partials/partial2.html
@@ -3,3 +3,9 @@
   Showing of 'interpolate' filter:
   {{ 'Current version is v%VERSION%.' | interpolate }}
 </p>
+
+<div class="healthtip-detail">
+	<!-- <span class="label label-primary">Primary</span> -->
+	<h4>{{healthtip.title}}</h4>
+	<p>{{healthtip.description}}</p>
+</div>
