--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -14,10 +14,8 @@
 	<div id="nav-container">
 
 		<ul class="list-group all">
-			<li ng-repeat="entry in entries" 
-					ng-click="setEntry(entry)"
-					class="list-group-item">
-				<a href="" 
+			<li ng-repeat="entry in entries" class="list-group-item">
+				<a href
 					 ng-click="itemClicked($index)"
 					 ng-class="{ 'current': $index == selectedIndex }">
 					<h2>{{entry.2}}</h2>
@@ -106,5 +104,5 @@
 		</div>
 	</div>
 </div>
-</div>
+
 <script src="js/partial1.js"></script>
