--- a/app/partials/content.html
+++ b/app/partials/content.html
@@ -5,11 +5,11 @@
 	</div>
 	<div id="content">
 		<h1 class="entry-title">
-			{{title}}
+			{{contentInfo.2}}
 		</h1>
 		<div class="entry">
-			<div class="entry-info">{{author}}</div>
-			<div ng-bind-html="content" class="entry-body">
+			<div class="entry-info">{{contentInfo.0}}</div>
+			<div ng-bind-html="contentInfo.3" class="entry-body">
 				<!-- {{content}} -->
 			</div>
 		</div>
