--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -26,68 +26,12 @@
 					<span class="badge">14</span>
 				</a>
 			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>有没有把 Mac 当作主机，iPhone 当作控制设备的游戏？</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-			<li class="list-group-item">
-				<a href="#" class="current">
-					<h2>Cras justo odio</h2>
-					<p><strong>usrname</strong><span>desription</span></p>
-					<span class="badge">14</span>
-				</a>
-			</li>
 		</ul>
 
 	</div>
 </div>
 
-<div id="right">
+<!-- <div id="right">
 	<div id="right-header">
 		<span>something</span>
 		<span class="more">more</span>
@@ -98,11 +42,10 @@
 		</h1>
 		<div class="entry">
 			<div class="entry-info">{{author}}</div>
-			<div ng-bind-html="content" class="entry-body">
-				<!-- {{content}} -->
-			</div>
+			<div ng-bind-html="content" class="entry-body"></div>
 		</div>
 	</div>
-</div>
+</div> -->
+<my-content info="entry"></my-content>
 
 <script src="js/partial1.js"></script>
