--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,51 +1,36 @@
 <!-- <p>This is the partial for view 1.</p> -->
 
 <div id="left">
-	<div id="header">
-		<a href="#" class="logo">&nbsp;</a>
-	</div>
-	<div id="filter">
-		<ul class="control">
-			<li><a href="#">全部</a></li>
-			<li><a href="#">话题</a></li>
-			<li><a href="#">用户</a></li>
-		</ul>
-	</div>
-	<div id="nav-container">
+  <div id="header">
+    <a href="#" class="logo">&nbsp;</a>
+  </div>
+  <div id="filter">
+    <ul class="control">
+      <li><a href="#">全部</a></li>
+      <li><a href="#">话题</a></li>
+      <li><a href="#">用户</a></li>
+    </ul>
+  </div>
+  <div id="nav-container">
 
-		<ul class="list-group all">
-			<li ng-repeat="entry in entries" class="list-group-item">
-				<a href
-					 ng-click="itemClicked($index)"
-					 ng-class="{ 'current': $index == selectedIndex }">
-					<h2>{{entry.2}}</h2>
-					<p>
-						<strong>{{entry.0}}</strong>
-						<span>{{entry.1}}</span>
-					</p>
-					<span class="badge">14</span>
-				</a>
-			</li>
-		</ul>
-
-	</div>
+    <ul class="list-group all">
+      <li ng-repeat="entry in entries" class="list-group-item">
+        <a href
+        ng-click="itemClicked($index, entry)"
+        ng-class="{ 'current': $index == selectedIndex }">
+          <h2>{{entry.2}}</h2>
+          <p>
+            <strong>{{entry.0}}</strong>
+            <span>{{entry.1}}</span>
+          </p>
+          <span class="badge">14</span>
+        </a>
+      </li>
+    </ul>
+  
+  </div>
 </div>
 
-<!-- <div id="right">
-	<div id="right-header">
-		<span>something</span>
-		<span class="more">more</span>
-	</div>
-	<div id="content">
-		<h1 class="entry-title">
-			{{title}}
-		</h1>
-		<div class="entry">
-			<div class="entry-info">{{author}}</div>
-			<div ng-bind-html="content" class="entry-body"></div>
-		</div>
-	</div>
-</div> -->
-<my-content info="entry"></my-content>
+<my-content content="opened"></my-content>
 
 <script src="js/partial1.js"></script>
