--- a/app/partials/my-item.html
+++ b/app/partials/my-item.html
@@ -1,6 +1,6 @@
 <li class="list-group-item">
   <a href
-  	 ng-click="itemClicked(entry);states.selectedIndex=$index"
+  	 ng-click="itemClicked(item);states.selectedIndex=$index"
   	 ng-class="{ 'current': $index == states.selectedIndex }" 
   	 ng-transclude>
 	</a>
