--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -14,7 +14,7 @@
   <div id="nav-container">
 
     <!-- <ul class="list-group all"> -->
-    <my-item-container>
+    <div my-item-container>
       <!-- <li ng-repeat="entry in entries" class="list-group-item">
         <a href
         ng-click="itemClicked($index, entry)"
@@ -30,7 +30,7 @@
       </li> -->
       </my-item>
     <!-- </ul> -->
-  </my-item-container>
+  </div my-item-container>
   
   </div>
 </div>
