--- a/app/partials/partial2.html
+++ b/app/partials/partial2.html
@@ -12,29 +12,33 @@
 
 
 
-<!-- <div>
+<!-- <div id="left">
+  <div id="header">
+    <a href="#" class="logo">&nbsp;</a>
+  </div>
+  <div id="filter">
+    <ul class="control">
+      <li><a href="#">全部</a></li>
+      <li><a href="#">话题</a></li>
+      <li><a href="#">用户</a></li>
+    </ul>
+  </div>
+  <div id="nav-container">
   <div infinite-scroll='reddit.nextPage()'
   infinite-scroll-disabled='reddit.busy' 
-  infinite-scroll-distance='1'>
-    <div ng-repeat='item in reddit.items'
+  infinite-scroll-distance='1' class="list-group all">
+    <div class="list-group-item" ng-repeat='item in reddit.items'
     style="border-bottom: 1px solid;">
-      <span class='score'>{{item.score}}</span>
-      <span class='title'>
-        <a ng-href='{{item.url}}' target='_blank'>{{item.title}}</a>
-      </span>
-      <br>
-      <small ng-click="itemClicked($index)">
-        by {{item.author}} -
-        <a ng-href='http://reddit.com{{item.permalink}}' 
-        target='_blank'>
-        {{item.num_comments}} comments
-        </a>
-      </small>
-      <div style='clear: both;'></div>
+      <h2>{{item.title}}</h2>
+        <p>
+          <strong>{{item.author}}</strong>
+          <span>{{item.score}}</span>
+        </p>
+        <span class="badge">14</span>
     </div>
     <div ng-show='reddit.busy'>Loading data...</div>
   </div>
-</div> -->
+</div></div> -->
 
 
 
@@ -52,7 +56,7 @@
   <div id="nav-container">
 
     <!-- <ul class="list-group all"> -->
-    <my-item-container infinite-scroll='reddit.nextPage()' infinite-scroll-disabled='reddit.busy' infinite-scroll-distance='1'>
+    <ul infinite-scroll='reddit.nextPage()' infinite-scroll-disabled='reddit.busy' infinite-scroll-distance='1' class="list-group all">
       <!-- <li ng-repeat="entry in entries" class="list-group-item">
         <a href
         ng-click="itemClicked($index, entry)"
@@ -61,14 +65,15 @@
         <h2>{{item.title}}</h2>
         <p>
           <strong>{{item.author}}</strong>
-          <span>{{item.score}}</span>
+          <span>{{item.num_comments}}</span>
         </p>
-        <span class="badge">14</span>
+        <span class="badge">{{item.score}}</span>
        <!--  </a>
       </li> -->
       </my-item>
+      <li ng-show='reddit.busy' style="padding: 8px;">Loading data...</li>
     <!-- </ul> -->
-  </my-item-container>
+  </ul>
   
   </div>
 </div>
